Created first file for hello world project

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Hello World!</h1>
     <h2>Three Things I'm Looking Forward to this School Year</h2>
     <ul>
-      Learning to work in a team
-      More open projects
-      Expanding design style
+      <li>Learning to work in a team
+      <li>More open projects
+      <li>Expanding design style
     </ul>
   </body>
 </html>
